--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Ignore environment files
 env
+brain_volumes_report.pdf
+20190221-ST001-MNBCP000178-v01-2-15mo_MR-SE002-T1w.nii.gz
+20190221-ST001-MNBCP000178-v01-2-15mo_MR-SE002-T1w.nii
+MNBCP000178_v01-2-15mo-20190221
