--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-*
+20190221-ST001-MNBCP000178-v01-2-15mo_MR-SE002-T1w.nii
+20190221-ST001-MNBCP000178-v01-2-15mo_MR-SE002-T1w.nii.gz
+MNBCP000178_v01-2-15mo-20190221/                                                                                      
+brain_volumes_report.pdf
+segmented_brain_views.png
